--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h1>NotMine</h1>
     <div class="username">@notmine_eth</div>
     <div class="social-links">
-      <a href="https://github.com/edcrack18" target="_blank">GitHub</a>
+      <a href="https://github.com/NotMine-eth" target="_blank">GitHub</a>
       <a href="https://x.com/edcrack181" target="_blank">X(suspendido y hackeado xd)</a>
     </div>
   </div>
