--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <div class="social-links">
       <a href="https://github.com/NotMine-eth" target="_blank">GitHub</a>
       <a href="https://x.com/edcrack181" target="_blank">X(suspendido y hackeado xd)</a>
+      <a href="https://steamcommunity.com/id/NotMine_eth" target="_blank">Steam</a>
     </div>
   </div>
 </body>
