--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <script src="logger.js"></script>
   <div class="card">
     <img src="https://cdn.discordapp.com/avatars/1355659541043351775/f035a4aa48377f90b9ec703286bb49f0.webp" alt="Foto de perfil" class="profilepic">
     <h1>NotMine</h1>
